Added a failover only writer proxy into the HA proxy config, setup a stats page for HA proxy and updated the readme.

--- a/files/xtradb_cluster.cfg
+++ b/files/xtradb_cluster.cfg
@@ -1,4 +1,4 @@
-# this config needs haproxy-1.4.20
+# this config needs haproxy-1.4.19
 
 global
         log 127.0.0.1   local0
@@ -16,17 +16,32 @@ defaults
         option  tcplog
         option  dontlognull
         retries 3
-        redispatch
+        option redispatch
         maxconn 2000
         contimeout      5000
         clitimeout      50000
         srvtimeout      50000
 
-listen mysql-cluster 0.0.0.0:4306
+listen cluster-writes 0.0.0.0:4306
     mode tcp
     balance roundrobin
     option  httpchk
 
-    server percona1 192.168.70.2:3306 check port 9200 inter 12000 rise 3 fall 3
-    server percona2 192.168.70.3:3306 check port 9200 inter 12000 rise 3 fall 3
-    server percona3 192.168.70.4:3306 check port 9200 inter 12000 rise 3 fall 3
+    server percona1 192.168.70.2:3306 check port 9200 inter 12000 rise 3 fall 3 backup
+    server percona2 192.168.70.3:3306 check port 9200 inter 12000 rise 3 fall 3 backup
+    server percona3 192.168.70.4:3306 check port 9200 inter 12000 rise 3 fall 3 backup
+
+listen cluster-reads 0.0.0.0:5306
+  mode tcp
+  balance roundrobin
+  option  httpchk
+
+  server percona1 192.168.70.2:3306 check port 9200 inter 12000 rise 3 fall 3
+  server percona2 192.168.70.3:3306 check port 9200 inter 12000 rise 3 fall 3
+  server percona3 192.168.70.4:3306 check port 9200 inter 12000 rise 3 fall 3
+  
+  
+listen admin_page 0.0.0.0:9999
+	mode http
+  balance roundrobin
+	stats uri /
